<resources>
    <string name="app_name">BatteryLowMessenger</string>
    <string name="select_contacts_for_dispatch">Выберите контакты для СМС</string>
    <string name="choose_text_for_sms">Выберите текст для СМС</string>
    <string name="edit_data">Редактировать данные</string>
    <string name="select_contact_to_send_message">Выберите контакты,которым будут отправлятся СМС</string>
    <string name="text_for_button_confirm">Подтвердить</string>
    <string name="enter_your_message">Введите текст сообщения</string>
    <string name="message_text_intro">Пожалуйста,введите текст сообщения,которое будут получать выбранные
    Вами контакты</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">На главную</string>
    <string name="set_battery_level">Настроить уровень батареи</string>
    <string name="additionally">Дополнительно</string>
    <string name="share">Поделится</string>
    <string name="enter_the_charge_level">Ввести уровень заряда</string>
    <string name="cancel">Отмена</string>
    <string name="reset">Сбросить</string>
    <string name="save">Сохранить</string>
    <string name="enter_your_message_text">Введите текст сообщения</string>
    <string name="content_desc">header image for navigation panel</string>
    <string name="imok">Я ВПорядке</string>
    <string name="mail">maximturkin50@gmail.com</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="set_language">Язык</string>
    <string name="set_Russian">Русский</string>
    <string name="set_English">Английский</string>
    <string name="set_OK">ОК</string>
    <string name="cont_description">cont_description</string>
    <string name="app_description">Спасибо,что скачали приложение! Оно поможет уведомить друзей, что вы будете не на связи,
       так как ваш телефон скоро разрядится.Это просто-при достижении низкого уровня заряда телефон отправит текстовое сообщение. Нажав
       кнопку "Выбрать контакты", вы можете отметить людей, которым будет отсылаться это сообщение.Нажав "Выбрать текст", вы сможете
           установить текст сообщения.Кнопка Редактировать нужна для исправления списка рассылки или изменения текста.Кроме того,
     вы можете самостоятельно указать уровень заряда, при котором будет рассылаться сообщение, выбрав кнопку "Настроить уровень батареи"
           в боковом меню.Если не указать свой уровень заряда,то сообщение будет отправлено автоматически при уровне заряда 3%. Приятного
           пользования!
        </string>

    <string name="rules">Правила</string>
    <string name="edit_contacts">Редактировать контакты</string>
    <string name="update_contacts">Обновить контакты</string>
    <string name="edit_messages">Редактировать сообщение</string>
    <string name="about_version">О версии</string>
    <string name="dialog_title_licenses">О версии</string>
    <string name="license_title_fab">Maxim Turkin</string>
    <string name="license_author_fab">Version 2.1</string>
    <string name="license_content_fab">Developed by Maxim Turkin</string>
    <string name="year_fab">2018</string>
    <string name="enter_correct_value">Введите корректное значение</string>
    <string name="selected_contacts">Выбранные контакты: </string>
    <string name="selected_message">Выбранное сообщение: </string>
    <string name="selected_batterylevel">Уровень заряда: </string>
    <string name="default_batterylevel">3</string>
    <string name="percent_symbol"> %</string>
    <string-array name="b">

    </string-array>
</resources>
