<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home_image"
            android:title="@string/home" />

        <item
            android:id="@+id/changeBatteryLevel"
            android:icon="@drawable/battery_image"
            android:title="@string/set_battery_level" />

        <item
            android:id="@+id/edit_contacts"
            android:icon="@drawable/change_contacts_image"
            android:title="@string/edit_contacts" />

        <item
            android:id="@+id/update_contacts"
            android:icon="@drawable/upgrade_contacts"
            android:title="@string/update_contacts"/>

        <item
            android:id="@+id/edit_message"
            android:icon="@drawable/change_message_image"
            android:title="@string/edit_messages" />


    </group>


    <item android:title="">
        <menu>

            <item
                android:id="@+id/rules"
                android:icon="@drawable/rules_image"
                android:title="@string/rules" />

            <item
                android:id="@+id/about_version"
                android:icon="@drawable/about_version_image"
                android:title="@string/about_version" />

        </menu>
    </item>




</menu>