<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" alias="v"/>

        <variable
            name="viewmodel"
            type="com.example.batterylowmessenger.viewModels.MessageFragmentViewModel" />

        <variable
            name="messageFragment"
            type="com.example.batterylowmessenger.view.MessageFragment" />

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/viewContainer"
        android:background="@color/white">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/linearlayout_bg"
            android:padding="10dp">

            <EditText
                android:id="@+id/editText_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_message_edit_text"
                android:ems="10"
                android:onTextChanged = "@{viewmodel.onTextChanged}"
                android:hint="@string/enter_your_message" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:onClick="@{messageFragment::backToHomeFragment}"
                    android:background="@drawable/button_gplus_gb"
                    android:textColor="@color/white"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/button_save"
                    android:visibility="@{viewmodel.madeSaveButtonEnabled ? v.VISIBLE : v.GONE}"
                    android:layout_width="0dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:onClick="@{messageFragment::backToHomeFragment}"
                    android:layout_weight="1"
                    android:background="@drawable/button_twitter_gb"
                    android:text="@string/save" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>